# Obstacle-Aware-RSMT

./: CMakeLists.txt
OARSMT-BONN/: Bonn_108500_141.stp  Bonn_109_101.stp  Bonn_129399_210.stp  Bonn_23292_54.stp  Bonn_35574_158.stp  Bonn_46269_127.stp
OARSMT-RT/: RT01.stp  RT02.stp  RT03.stp  RT04.stp  RT05.stp
src/: Painter.cpp  Painter.h  main.cpp
